<?xml version="1.0"?>
<package format="3">
  <name>ecn_common</name>
  <version>0.0.1</version>
  <description>
    Common package for various labs @ Centrale Nantes
  </description>
  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>
  <license>GPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>cv_bridge</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
